About fix scrollbar

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,6 +32,12 @@ $main-color: #5855ff;
   &::-webkit-scrollbar {
     display: none;
   }
+  &::-moz-scrollbar {
+    display: none;
+  }
+  &::-ms-scrollbar {
+    display: none;
+  }
 }
 
 body {
@@ -406,6 +412,7 @@ ABOUT PAGE
   animation-name: fade;
   animation-duration: 2s;
   animation-fill-mode: forwards;
+  overflow-x: hidden;
   &-bloc {
     margin-top: 20vh;
     padding-right: 150px;
